added wpiformat run on save and git in code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,17 @@
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib",
   "python.terminal.activateEnvInCurrentTerminal": true,
-  "python.defaultInterpreterPath": "${workspaceFolder}/venv/Scripts/python.exe"
+  "python.defaultInterpreterPath": "${workspaceFolder}/venv/Scripts/python.exe",
+  "emeraldwalk.runonsave": {
+    "commands": [
+      {
+        "match": "\\.cpp$",
+        "cmd": "${workspaceFolder}/venv/Scripts/wpiformat.exe"
+      },
+      {
+        "match": "\\.h$",
+        "cmd": "${workspaceFolder}/venv/Scripts/wpiformat.exe"
+      }
+    ]
+  }
 }
