--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id "edu.wpi.first.GradleRIO" version "2024.1.1-beta-3"
 }
 
+wpi.maven.useLocal = false
+wpi.maven.useDevelopment = true
+wpi.versions.wpilibVersion = '2024.1.1-beta-3-53-g31cd015'
+wpi.versions.wpimathVersion = '2024.1.1-beta-3-53-g31cd015'
+
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
 deploy {
